[package]
name = "variation"
version = "0.1.0"
authors = ["Aaron Power <a.power@1aim.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A procedural macro to generate enum variant methods"

[lib]
proc-macro = true

[dependencies]
heck = "0.3.1"
proc-macro2 = "0.4.26"
syn = "0.15.26"
quote = "0.6.11"
